<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MediaCodec Test Studio</string>
    <!--<string name="hello_world">Hello world!</string>-->
    <string name="action_settings">Settings</string>
    <!--<string name="button">Button</string>-->
    <string name="Stop">Stop</string>
    <string name="camera">Camera</string>

    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">MediaCodec Test suite</string>
    <string name="nav_header_subtitle">my616422@126.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_yuv_encode_to_h264">YUV Encode to H.264</string>
    <string name="menu_yuvplayer">YUV_Player</string>
    <string name="menu_h264265_decode_and_player">H.264/H.265 Decode&amp;Player</string>
    <string name="menu_mediaplayer">MediaPlayer</string>
    <string name="menu_mediacodecinfo">Mediacodecinfo</string>
    <string name="menu_camera_manager">CameraManager</string>
    <string name="menu_setting">Setting</string>
    <string name="menu_more">More</string>


</resources>
