<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.mediacodecencode.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home"/>

    <activity
        android:id="@+id/nav_yuv_encode_to_h264"
        android:label="@string/menu_yuv_encode_to_h264"
        android:name="com.example.mediacodecencode.YUVEncodeActivity" />

    <activity
        android:id="@+id/nav_yuvplayer"
        android:label="@string/menu_yuvplayer"
        android:name="com.example.mediacodecencode.YUVPlayerActivity" />

    <activity
        android:id="@+id/nav_h264265_decode_and_player"
        android:label="@string/menu_h264265_decode_and_player"
        android:name="com.example.mediacodecencode.H264265DecodePlayerActivity" />
    <fragment
        android:id="@+id/nav_mediaplayer"
        android:name="com.example.mediacodecencode.ui.home.HomeFragment"
        android:label="@string/menu_mediaplayer"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_mediacodecinfo"
        android:name="com.example.mediacodecencode.ui.gallery.GalleryFragment"
        android:label="@string/menu_mediacodecinfo"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_camera_manager"
        android:name="com.example.mediacodecencode.ui.home.HomeFragment"
        android:label="@string/menu_camera_manager"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_setting"
        android:name="com.example.mediacodecencode.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_setting"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_about"
        android:name="com.example.mediacodecencode.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_more"
        tools:layout="@layout/fragment_slideshow" />

</navigation>